# app

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .metadata  .replit  CHANGELOG.md  Dockerfile  Flavors.md  Getting-Started.md  README.md  Running-Tests.md  Translations.md  _new.md  _typos.toml  analysis_options.yaml  build.yaml  cspell.json  dart_test.yaml  dartdoc_options.yaml  flutter_launcher_icons.yaml  l10n.yaml  lychee.toml  netlify.toml  project_words.txt  pubspec.yaml  pyproject.toml  socket.yml  untranslated.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  cspell.json  dependabot.yaml  pull_request_template.md  renovate.json
.github/DISCUSSION_TEMPLATE/: ideas.yaml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml  plan.yaml
.github/workflows/: ci.yaml  codeql.yaml  dart.yaml  dart.yml  markdown.yaml  markdown.yml  python.yaml
android/: .gitignore  build.gradle.kts  gradlew  local.properties  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
app/: pubspec.yaml
app/web/: index.html
assets/fonts/: OFL.txt
doc/: c4-diagram.md  docker.md  providers-diagram.md  tests.md  translations.md
docs/: Getting-Started.md  Running-Tests.md
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_router.dart  app_router.gr.dart  bootstrap.dart  main.dart  main.gr.dart  main_development.dart  main_production.dart  main_staging.dart  model.dart  widgetbook.generator.dart  wrapper.dart
lib/app/: app.dart  app_router.dart  boostrap.dart  bootstrap.dart
lib/app/view/: app.dart
lib/counter/: counter.dart
lib/env/: env.dart
lib/l10n/: l10n.dart
lib/pages/: favorites.dart  home.dart
lib/providers/: client.dart  model.dart
lib/utils/: api.dart  client.dart  constants.dart  design.dart  device_repository.dart  fonts.dart  hooks.dart  json_converters.dart  log.dart  models.dart  router.dart  secrets.dart  snackbar.dart  string.dart
lib/widgets/: big_card.dart  big_list_tile.dart  history.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
server/: README.md  pubspec.yaml  pyproject.toml  server.dart
server/src/server/: __init__.py  main.py
test/: server_test.dart  widget_test.dart
web/: auth.html  flutter_bootstrap.js  index.html  manifest.json  manifest.webmanifest
windows/: CMakeLists.txt
(+140 files in other folders)
