[tool.poetry]
authors = [
  "Eli <88557639+lishaduck@users.noreply.github.com>",
]
description = ""
name = "server"
packages = [
  { include = "server", from = "server/src" },
]
readme = "server/README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = { version = "^0.97.0", extras = [
  "all",
] }
python = "^3.10"
rich = "^13.4.1"
strawberry-graphql = { version = "^0.184.0", extras = [
  "fastapi",
] }
typing-extensions = "^4.6.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"


[tool.ruff]
ignore = ["D203", "D213", "D400", "E501"]
select = ["ALL"]

respect-gitignore = true
src               = ["./server/src"]


[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
