[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Eli <88557639+lishaduck@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
rich = "^13.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
