[tool.poetry]
authors = [
  "Eli <88557639+lishaduck@users.noreply.github.com>",
]
description = ""
name = "server"
packages = [{ include = "server", from = "src" }]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.95.1"
python  = "^3.10"
rich    = "^13.3.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
